--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-day-picker": "^2.4.1",
     "react-dom": "^15.4.1",
     "react-file-drop": "^0.1.8",
+    "react-router": "^3.0.0",
     "react-waypoint": "^3.1.0",
     "rusha": "0.8.3",
     "underscore.string": "^3.3.4",
