view: embedded API, video player
use videojs player

custom theme

minimal react wrapper, we don't need to interact with the player from the rest of the view.

reponsive sizing

also provides server-side rendering as html5 video tag

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "rusha": "0.8.3",
     "underscore.string": "^3.3.4",
     "uuid-validate": "0.0.2",
+    "video.js": "^5.12.6",
     "xhr": "^2.2.0"
   },
   "devDependencies": {
