deps: upgrade react and build tools

--- a/package.json
+++ b/package.json
@@ -31,12 +31,13 @@
     "ampersand-rest-collection": "5.0.0",
     "any_sha1": "0.1.1",
     "async": "^2.1.4",
+    "babel-preset-react": "^6.22.0",
     "babel-runtime": "^6.18.0",
     "babyparse": "^0.4.3",
     "bulk-require": "0.2.1",
     "check-dependencies": "0.11.0",
     "classnames": "^2.2.3",
-    "coffee-script": "1.10.0",
+    "coffee-script": "^1.12.3",
     "font-awesome": "^4.6.3",
     "fs-extra": "^0.30.0",
     "global": "4.3.0",
@@ -51,10 +52,10 @@
     "pdfjs-dist": "^1.4.95",
     "po2json": "0.4.1",
     "qs": "^6.1.0",
-    "react": "^15.4.1",
+    "react": "^15.4.2",
     "react-bootstrap": "^0.30.5",
     "react-day-picker": "^2.4.1",
-    "react-dom": "^15.4.1",
+    "react-dom": "^15.4.2",
     "react-file-drop": "^0.1.8",
     "react-waypoint": "^3.1.0",
     "rusha": "0.8.3",
@@ -66,7 +67,8 @@
   "devDependencies": {
     "@eins78/rspec-render-docs": "^1.0.0-alpha.3",
     "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-react-app": "^0.2.1",
+    "babel-polyfill": "^6.22.0",
+    "babel-preset-react-app": "^2.0.1",
     "babelify": "^7.3.0",
     "big-list-of-naughty-strings": "1.0.0",
     "brfs": "^1.4.3",
@@ -74,10 +76,11 @@
     "browserify-incremental": "3.0.1",
     "bulkify": "1.1.1",
     "cheerio": "^0.20.0",
-    "coffee-react": "^4.1.0",
-    "coffee-react-transform": "3.3.0",
-    "coffee-reactify": "4.0.0",
-    "coffeelint": "^1.14.2",
+    "coffee-react": "^5.0.1",
+    "coffee-react-transform": "^5.0.0",
+    "coffee-reactify": "^5.1.0",
+    "coffee-script": "^1.12.3",
+    "coffeelint": "^1.16.0",
     "standard": "^6.0.7",
     "watchify": "^3.7.0"
   },
