--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
     "ampersand-model": "6.0.2",
     "ampersand-react-mixin": "github:eins78/ampersand-react-mixin#1e7b0c4",
     "ampersand-rest-collection": "5.0.0",
-    "any_sha1": "0.1.1",
+    "any_sha1": "^0.1.1",
     "async": "^2.1.4",
     "babel-preset-react": "^6.22.0",
     "babel-runtime": "^6.18.0",
     "babyparse": "^0.4.3",
     "bulk-require": "0.2.1",
-    "check-dependencies": "0.11.0",
+    "check-dependencies": "^0.11.0",
     "classnames": "^2.2.3",
     "coffee-script": "^1.12.3",
     "font-awesome": "^4.6.3",
@@ -43,14 +43,12 @@
     "global": "4.3.0",
     "hashblot": "0.4.5",
     "history": "^2.0.0",
-    "hogan.js": "3.0.2",
     "jquery": "^2.2.1",
     "linkifyjs": "^2.0.0-beta.9",
-    "local-links": "1.4.0",
+    "local-links": "^1.4.0",
     "lodash": "^4.16.2",
     "moment": "^2.15.1",
     "pdfjs-dist": "^1.4.95",
-    "po2json": "0.4.1",
     "qs": "^6.1.0",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.5",
@@ -58,9 +56,9 @@
     "react-dom": "^15.4.2",
     "react-file-drop": "^0.1.8",
     "react-waypoint": "^3.1.0",
-    "rusha": "0.8.3",
+    "rusha": "^0.8.3",
     "underscore.string": "^3.3.4",
-    "uuid-validate": "0.0.2",
+    "uuid-validate": "^0.0.2",
     "video.js": "^5.12.6",
     "xhr": "^2.2.0"
   },
@@ -72,10 +70,10 @@
     "babelify": "^7.3.0",
     "big-list-of-naughty-strings": "1.0.0",
     "brfs": "^1.4.3",
-    "browserify": "^11.2.0",
-    "browserify-incremental": "3.0.1",
-    "bulkify": "1.1.1",
-    "cheerio": "^0.20.0",
+    "browserify": "^14.0.0",
+    "browserify-incremental": "^3.1.1",
+    "bulkify": "^1.4.2",
+    "cheerio": "^0.22.0",
     "coffee-react": "^5.0.1",
     "coffee-react-transform": "^5.0.0",
     "coffee-reactify": "^5.1.0",
