--- a/config/settings.yml
+++ b/config/settings.yml
@@ -12,6 +12,10 @@ zhdk_integration: false
 
 mini_profiler_enabled: true
 
+webapp_embeds:
+  enable_opengraph: true
+  twitter_cards_site: false
+
 # this is only relevant for zhdk instances, it is defined here for local development:
 ui_bundle_context_keys:
 - { group: 'media_content:portrayed_object_location', prefix: 'media_content:portrayed_object_' }
