--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "hashblot": "0.4.5",
     "history": "^2.0.0",
     "jquery": "^2.2.1",
-    "linkifyjs": "^2.0.0-beta.9",
+    "linkifyjs": "^2.1.4",
     "local-links": "^1.4.0",
     "lodash": "^4.16.2",
     "moment": "^2.15.1",
