--- a/package.json
+++ b/package.json
@@ -25,41 +25,41 @@
     "@eins78/typeahead.js": "0.11.2-pre.1",
     "@eins78/typopro-open-sans": "0.0.0",
     "active-lodash": "1.2.2",
-    "ampersand-app": "^2.0.0",
+    "ampersand-app": "2.0.0",
     "ampersand-model": "6.0.2",
     "ampersand-react-mixin": "github:eins78/ampersand-react-mixin#1e7b0c4",
     "ampersand-rest-collection": "5.0.0",
-    "any_sha1": "^0.1.1",
-    "async": "^2.1.4",
-    "babel-preset-react": "^6.22.0",
-    "babel-runtime": "^6.18.0",
-    "babyparse": "^0.4.3",
+    "any_sha1": "0.1.1",
+    "async": "2.1.4",
+    "babel-preset-react": "6.22.0",
+    "babel-runtime": "6.18.0",
+    "babyparse": "0.4.3",
     "bulk-require": "0.2.1",
-    "check-dependencies": "^0.11.0",
-    "classnames": "^2.2.3",
-    "coffee-script": "^1.12.3",
-    "font-awesome": "^4.6.3",
-    "fs-extra": "^0.30.0",
+    "check-dependencies": "0.11.0",
+    "classnames": "2.2.3",
+    "coffee-script": "1.12.3",
+    "font-awesome": "4.6.3",
+    "fs-extra": "0.30.0",
     "global": "4.3.0",
     "hashblot": "0.4.5",
-    "history": "^2.0.0",
-    "jquery": "^2.2.1",
-    "linkifyjs": "^2.1.4",
-    "local-links": "^1.4.0",
-    "lodash": "^4.16.2",
-    "moment": "^2.15.1",
-    "qs": "^6.1.0",
-    "react": "^15.4.2",
-    "react-bootstrap": "^0.30.5",
-    "react-day-picker": "^2.4.1",
-    "react-dom": "^15.4.2",
-    "react-file-drop": "^0.1.8",
-    "react-waypoint": "^3.1.0",
-    "rusha": "^0.8.3",
-    "underscore.string": "^3.3.4",
-    "uuid-validate": "^0.0.2",
-    "video.js": "^5.16.0",
-    "xhr": "^2.2.0"
+    "history": "2.1.2",
+    "jquery": "2.2.4",
+    "linkifyjs": "2.1.4",
+    "local-links": "1.4.0",
+    "lodash": "4.16.3",
+    "moment": "2.15.1",
+    "qs": "6.1.0",
+    "react": "15.4.2",
+    "react-bootstrap": "0.30.7",
+    "react-day-picker": "2.5.0",
+    "react-dom": "15.4.2",
+    "react-file-drop": "0.1.8",
+    "react-waypoint": "3.1.3",
+    "rusha": "0.8.3",
+    "underscore.string": "3.3.4",
+    "uuid-validate": "0.0.2",
+    "video.js": "5.16.0",
+    "xhr": "2.2.0"
   },
   "devDependencies": {
     "@eins78/rspec-render-docs": "^1.0.0-alpha.3",
