chore: speed up specs
removed keyword spec flackyness

---

split specs

too many scenarios in 1 file is too slow in CI.
split up extreme cases (+5min)

---

helper: speed up `sign_in_as`

we don't have to go to the dashboard at all,
can be done explicitly if needed.
login spec still checks the default redirect.

adapted specs that relied on the signin helper also navigating to /my

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -20,6 +20,10 @@ Metrics/BlockLength:
   Exclude:
     - 'spec/**/*'
 
+Style/VariableNumber:
+  Exclude:
+    - 'spec/**/*'
+
 Lint/EndAlignment:
   AlignWith: variable
 
