feat: view: VocabulariesIndex: list MetaKeys
- use default order
- add spec

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -223,6 +223,9 @@ Metrics/ModuleLength:
   Max: 200
   CountComments: false
 
+Style/MultilineArrayBraceLayout:
+  Enabled: false
+
 # NOTE: this is a bad joke
 Style/FrozenStringLiteralComment:
   Enabled: false
