ci: split meta tasks

--- a/cider-ci.yml
+++ b/cider-ci.yml
@@ -10,40 +10,41 @@ jobs:
     context:
       include: cider-ci/context-components/rspec-tests.yml
 
-  code-checks:
-    name: "Code Checks"
+  lint:
+    name: "Linting"
     description: |
-      Run static checks and metrics: complexity, duplication, and format.
+      Code checks: static checks and metrics: complexity, duplication, and format,
+      also other consistency checks.
     priority: 3
     run_when: *DEFAULT_TRIGGERS
     context:
-      include: cider-ci/context-components/code-checks.yml
-
-  delivery-tests:
-    name: "Delivery"
-    run_when: *DEFAULT_TRIGGERS
-    context:
-      include: cider-ci/context-components/delivery.yml
-
-  meta-checks:
-    name: Meta
-    description: |
-      Tasks that rely on external (out-of-repository) state.
-      Their state is not as fixed as in the other Jobs, so it might change over time.
-    priority: 3 # "I don't always run this, but when I do, it should be fast"
-    run_when: *DEFAULT_TRIGGERS
-    context:
-      include:
-        - path: cider-ci/contexts/meta-checks.yml
-          submodule: [datalayer]
       task_defaults:
         environment_variables:
           GIT_LINEAR_HISTORY_CHECK_START_SHA: 3eef3fe03c77970a301e641812e11a0d80a8d188
-      tasks:
-        Check misnamed specs:
-          scripts: {test: {body: {
-            read_and_replace_with: cider-ci/bin/check-misnamed-specs
-          }}}
+      contexts:
+        include:
+          - path: cider-ci/context-components/lint/git-lint.yml
+          - path: cider-ci/context-components/lint/javascript-lint.yml
+          - path: cider-ci/context-components/lint/rspec-lint.yml
+          - path: cider-ci/context-components/lint/ruby-lint.yml
+
+  precompilation-checks:
+    name: "Precompilation"
+    run_when: *DEFAULT_TRIGGERS
+    context:
+      include: cider-ci/context-components/precompilation.yml
+
+  good-to-merge:
+    name: "Good To Merge"
+    description: |
+      This job depends on all jobs that need to pass for "Delivery".
+      It is depended upon by GitHub's branch protection (for `master`)!
+    priority: 999 # "delivery" job = high priority
+    context:
+      include: cider-ci/context-components/merge-checks.yml
+    depends_on:
+      all-tests: {job_key: all-tests, type: job, states: [passed]}
+      good to merge of the datalayer: {job_key: good-to-merge, type: job, submodule: [datalayer], states: [passed]}
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 # META JOBS (only depend on other jobs)                                           #
@@ -59,31 +60,17 @@ jobs:
       task: "echo '✔︎ All dependencies have passed' ; exit 0"
     run_when: *DEFAULT_TRIGGERS
     depends_on:
+      lint: {job_key: lint, type: job, states: [passed]}
       rspec-tests:    {job_key: rspec-tests,    type: job, states: [passed]}
-      delivery-tests: {job_key: delivery-tests, type: job, states: [passed]}
-      code-checks: {job_key: code-checks, type: job, states: [passed]}
+      precompilation-checks: {job_key: precompilation-checks, type: job, states: [passed]}
       all-tests of the datalayer: {job_key: all-tests, type: job, submodule: [datalayer], states: [passed]}
 
-  good-to-merge:
-    name: "Good To Merge"
-    description: |
-      This job depends on all jobs that need to pass for "Delivery".
-      It is depended upon by GitHub's branch protection (for `master`)!
-    priority: 999 # "empty" job = high priority
-    context:
-      task: "echo '✔︎ All dependencies have passed' ; exit 0"
-    run_when: *DEFAULT_TRIGGERS
-    depends_on:
-      all-tests:      {job_key: all-tests,    type: job, states: [passed]}
-      meta-checks:    {job_key: meta-checks,    type: job, states: [passed]}
-      good to merge of the datalayer: {job_key: good-to-merge, type: job, submodule: [datalayer], states: [passed]}
-
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
-# OTHER JOBS (not striclty needed for development process/delivery)
+# OTHER JOBS (not strictly needed for development process/delivery)
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
   wip-rspec-tests:
-    name: "⟨WIP⟩ RSpec Tests"
+    name: "\uD83D\uDEA7 ⟨WIP⟩ RSpec Tests"
     description: |
       Run RSpec Tests in "Work-in-Progress" mode (i.e. compile assets on the fly)
     priority: -1337
@@ -109,3 +96,58 @@ jobs:
           test:
             start_when:
               assets are precompiled: {script_key: precompile-assets }
+
+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+# JOBS THAT DO SOMETHING /o\
+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+
+# TODO: make a job that *does* the things neccessary for `Merge-Checks` to pass
+# and immediatly pushes to github. This gets rid of the common timing problem
+# while merging (by using the CI as a "global lock")
+
+  # do-merge:
+  #   name: "\uD83D\uDE80 Do Merge"
+  #   description: |
+  #     *This job can be run instead of manually delivering and then re-trying the 'Merge-Checks'.*
+  #
+  #     It checks if the current commit can be automatically merged,
+  #     then executes the neccessary actions and finally pushes it to origin/master.
+  #
+  #   priority: 999
+  #
+  #   # same dependencies like "good to merge", but without the "merge-checks"
+  #   depends_on:
+  #     all-tests: {job_key: all-tests, type: job, states: [passed]}
+  #     good to merge of the datalayer: {job_key: good-to-merge, type: job, submodule: [datalayer], states: [passed]}
+  #
+  #   context:
+  #     tasks:
+  #       "Do Merge":
+  #
+  #         traits:
+  #           ci-executor.madek: yes
+  #
+  #         exclusive_global_resources:
+  #           'webapp_do_merge.ci.madek.zhdk.ch': true
+  #
+  #         git_options: { submodules: { include_match: ^.*$ } }
+  #         aggregate_state: satisfy-last
+  #         eager_trials: 1
+  #         max_trials: 1
+  #
+  #         scripts:
+  #           main:
+  #             body: |
+  #               #!/usr/bin/env bash
+  #               set -exu
+  #
+  #               git fetch origin
+  #
+  #               cider-ci/bin/check-git-branch-current
+  #               cider-ci/bin/check-git-submodules-current
+  #
+  #               # TODO: check all commits betwen origin/master...HEAD are signed
+  #
+  #               # push all submodules that reside in the 'Madek' org:
+  #               git submodule foreach --recursive '{ git config remote.origin.url | grep -qe 'github\.com.Madek' ;} && git push origin HEAD:master || exit 0'
+  #               git push origin HEAD:master
